# Urban_Environmental_Monitoring

./: README.md
urban-environmental-data-generator/: .gitignore  Makefile  README.md  pyproject.toml
urban-environmental-data-generator/data/reference/: grid_context.csv  nyc_boroughs.geojson  sensor_context.csv  threshold_profile.csv
urban-environmental-data-generator/docs/: data_generation.md
urban-environmental-data-generator/scripts/: generate_dataset.sh  verify_dataset.sh
urban-environmental-data-generator/src/uem_data_generator/: cli.py  config.py  generation.py  line_protocol.py  live_feed.py  synthetic_model.py  worker.py
urban-environmental-data-generator/src/uem_data_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
urban-environmental-data-generator/tests/: test_line_protocol.py
urban-environmental-monitoring/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
urban-environmental-monitoring/data/dataset/: checksums.sha256  manifest.json
urban-environmental-monitoring/docs/architecture/: system_design.md
urban-environmental-monitoring/docs/setup/: step_by_step.md  troubleshooting.md
urban-environmental-monitoring/grafana/dashboards/: Urban Environmental Monitoring — City Operations Dashboard-1781780.json  (+2 more)
urban-environmental-monitoring/influx/: backfill_alerts.flux
urban-environmental-monitoring/scripts/: backfill_alerts.sh  bootstrap.sh  continuous_live.sh  install_dataset.sh  load_historical.sh  replay_live.sh  status.sh
urban-environmental-monitoring/telegraf/: telegraf.conf
(+9 files in other folders)
