[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uem-data-generator"
version = "1.0.0"
description = "Offline dataset generator for the Urban Environmental Monitoring ADMM project"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "pandas>=2.1"]

[project.scripts]
uem-generate = "uem_data_generator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
